--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -1,13 +1,11 @@
 ---
 layout: post
-title: Toy Problem: Coin Sums
+title: Coin Sums
 description: 
 modified: 2014-02-04
 tags: [toy problems, coin sums, algorithms]
 image:
-  feature: abstract-3.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: great-britain-coins-money.jpg
 comments: true
 share: true
 ---
