--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -15,14 +15,15 @@ How many possible ways can you make change for 2£ given the following English c
 1p, 2p, 5p, 10p, 20p, 50p, 1£ (100p), 2£ (200p)
 
 One example output would be:
-5 1p pieces, 5 2p pieces, 1 5p piece, 1 10p piece, 1 20p piece, 1 50p piece, 1 1£ piece
+5*1p, 5*2p, 1*5p, 1*10p, 1*20p, 1*50p, 1*1£
 
 ## Understanding the Problem 
-This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1p,2p is the same as 2p,1p and therefore we should only count one of these combinations.)  Knowing this helps to reduce the problem.  But in what way?  What does the problem look like?
+This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1*1p,1*2p is the same as 1*2p,1*1p and therefore we should only count one of these combinations.)  Knowing this helps to reduce the problem.  But in what way?  What does the problem look like?
 
 Let's start off by looking at a smaller version of this problem.  Imagine that we have only 3 different types of coins - 1p, 5p, and 10p - and we're trying to make 'piles' of coins that sum up to 20p.  What are the possible coin combinations that we can make?
 
 Number of coins of each type used:
+
 |   10p   |   5p    |   1p    |
 |:--------|:-------:|--------:|
 |    0    |    0    |    20   |
@@ -36,17 +37,22 @@ Number of coins of each type used:
 |    2    |    0    |     0   |
 {: rules="groups"}
 
-There is a pattern here.  The largest-valued coin (10p) is only used in 4 of the 9 possible combinations.  So we do not need to iterate through every single type of coin when we try to create these 'piles.'  We can start by iterating with the largest coin to get those 4 combinations, then iterate through the next-largest to get an additional 4 combinations, and then iterate through the smallest to get the last combinations.
+There is a pattern here.  The largest-valued coin (10p) is only used in 4 of the 9 possible combinations so we do not need to iterate through every single type of coin when we try to create these 'piles.'  We can think about this problem as starting with the largest coin to get those 4 combinations, then with the next-largest to get an additional 4 combinations, and then the smallest to get the last combination.
+
+## Javascript
+Let's translate this problem into Javascript
 
 ### To Iterate or to Recurse?
-Since we'll be dividing this problem into similar subproblems, I'll use recursion.  However, it's possible to turn recursive functions into iterative ones and vice versa.  
+This problem can be divided into similar subproblems (in this example, the subproblems are all combinations with 10p, 5p, 1p; then all combinations with 5p, 1p; then all combinations with 1p).  This is perfect for a recursive algorithm.    
 
-I find it easiest in terms of readability to create a recursive subroutine inside a main function.  The return variable is declared and returned within the main function and the subroutine is called within the the main function.
+### What is the input variable?
+Even though we know that we're looking for the piles to sum to 2£, let's make the argument of this function a variable called `total`.  We'll call this for the first time with the value 2£ (200p).
 
 ### What is the return variable?
 The problem asks for the number of possible ways to make change for 2£.  So the return variable will be a counter initialized to 0.
 
 ### The basic structure 
+I find it easiest in terms of readability to create a recursive subroutine inside a main function instead of recursing from the main function.  The return variable is declared and returned within the main function and the subroutine is called within the the main function.
 
 {% highlight javascript %}
 var makeChange = function(total) {
@@ -64,3 +70,96 @@ var makeChange = function(total) {
 };
 {% endhighlight %}
 
+## The Recursive Function
+
+### Arguments 
+There are a few things that we need to keep track of with each call of our recursive function.  First, we need to know how many types of coins there are that we can add to our pile.  Remember in our small example, the subproblems of this problem are to find all combinations with 10p, 5p, 1p; then all combinations with 5p, 1p; then all combinations with 1p.  In each of these subproblems we need to know what coins are left for us to work with.  Let's keep this information in a variable called `coinsLeft`.  
+
+As we add coins to our pile, we also need to keep track of the value still needed to reach the `total`.  We can save this information in a variable called `valueLeft` and we'll initially set it to `total`.  
+
+Both these variables - `coinsLeft` and `valueLeft` - should be arguments of the recursive function.
+
+{% highlight javascript %}
+  var changer = function(coinsLeft, valueLeft) {
+    // our recursive function
+  }
+{% endhighlight %}
+
+Initially, `coinsLeft` will be set to all the types of coins in the `coins` array and `valueLeft` will equal `total`.  We'll call the recursive function from within the main function as below:
+
+{% highlight javascript %}
+  changer(coins, total);
+{% endhighlight %}
+
+### Inside the Recursive Function
+
+We've already decided that we'll begin putting coins into the pile with the highest-valued coin.  Let's save the highest-valued coin to a variable called `currentCoin `.
+
+{% highlight javascript %}
+    var currentCoin = coinsLeft.pop();
+{% endhighlight %}
+
+Now that we have our variables `coinsLeft`, `valueLeft`, and `currentCoin`, we can start creating piles of coins that add up to `total`.  We can do this by calling the recursive function with a copy of `coinsLeft` and `valueLeft` and then decrementing `valueLeft` with the value of the type of `currentCoin` until `valueLeft` goes below 0.  
+
+{% highlight javascript %}
+    while(valueLeft >= 0) {
+      // call the function with a copy of the array and the total value still needed
+      changer(coinsLeft.slice(), valueLeft);
+      // reduce the total value still needed by the value of the coin popped
+      valueLeft -= currentCoin;
+    }
+{% endhighlight %}
+
+and we'll stop putting coins in the pile when there are no coins left in coinsLeft.  
+
+{% highlight javascript %}
+    if (coinsLeft.length === 0) {
+      count++;
+      return;
+    }
+{% endhighlight %}
+
+
+
+{% highlight javascript %}
+{% endhighlight %}
+
+
+
+{% highlight javascript %}
+
+var makeChange = function(total) {
+
+  var coins = [1,2,5,10,20,50,100,200];
+  var count = 0;
+ 
+  // the coins array gets modified with each recursive call
+  // our recursive function takes two arguments:
+  // (1) the modified coins array and (2) the total value still needed
+  var changer = function(coinsLeft, valueLeft) {
+
+    // we follow the pattern - that we don't need to iterate over all the coins
+    // for every call
+    var currentCoin = coinsLeft.pop();
+
+    // exit strategy - when our coins array is empty
+    if (coinsLeft.length === 0) {
+      count++;
+      return;
+    }
+
+    // as long as the total valueLeft still needed is greater than or equal to 0, 
+    // we keep trying to add coins to our pile
+    while(valueLeft >= 0) {
+      // call the function with a copy of the array and the total valueLeft still needed
+      changer(coinsLeft.slice(), valueLeft);
+      // reduce the total valueLeft still needed by the valueLeft of the coin popped
+      valueLeft -= currentCoin;
+    }
+
+  };
+
+  changer(coins, total);
+  return count;
+};
+{% endhighlight %}
