--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -47,6 +47,18 @@ Let's make the argument of the function a variable called `total`.  Since our go
 
 The return value should be the number of possible ways to make change for the total.  The return variable will be a counter initialized to 0.
 
+{% highlight javascript %}
+var makeChange = function(total) {
+
+  var coins = [1,2,5,10,20,50,100,200];
+  var count = 0;
+ 
+  return count;
+};
+
+makeChange(200);
+{% endhighlight %}
+
 ### To Iterate or to Recurse?
 An iterative approach requires that we hard-code each of the type of coins in their own for loop.  An iterative solution might look something like the following:
 
@@ -77,7 +89,9 @@ var makeChange = function(total) {
 makeChange(200);
 {% endhighlight %}
 
-We see that this problem can easily be divided into a series of similar subproblems - get all the combinations of coins with just 1p coins, all the combinations with 1p and 2p coins, all the combinations with 1p, 2p, and 5p coins, etc.  A problem like this is perfect for a recursive function.
+Note that the `coins[coins.length-1]` notation looks a little strange, but the idea is to show the similarities between this iterative solution and the solution coming in the section below.
+
+The iterative function works, but it's not very elegant.  In fact, this problem can easily be divided into a series of similar subproblems - get all the combinations of coins with just 1p coins, all the combinations with 1p and 2p coins, all the combinations with 1p, 2p, and 5p coins, etc - and a problem like this is perfect for a recursive function.
 
 ## The Recursive Function
 
@@ -183,9 +197,4 @@ var makeChange = function(total){
 
 makeChange(200);
 {% endhighlight %}
-
-
-{% highlight javascript %}
-{% endhighlight %}
-
 
