--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -15,10 +15,10 @@ How many possible ways can you make change for 2£ given the following English c
 1p, 2p, 5p, 10p, 20p, 50p, 1£ (100p), 2£ (200p)
 
 One example output would be:
-5*1p, 5*2p, 1*5p, 1*10p, 1*20p, 1*50p, 1*1£
+5 x 1p, 5 x 2p, 1 x 5p, 1 x 10p, 1 x 20p, 1 x 50p, 1 x 1£
 
 ## Understanding the Problem 
-This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1*1p,1*2p is the same as 1*2p,1*1p and therefore we should only count one of these combinations.)  Knowing this helps to reduce the problem.  What does the problem look like?
+This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1 x 1p,1 x 2p is the same as 1 x 2p,1 x 1p and therefore we should only count one of these combinations.)    
 
 Let's start off by looking at a smaller version of this problem.  Imagine that we have only 3 different types of coins - 1p, 5p, and 10p - and we're trying to make 'piles' of coins that sum up to 20p.  What are the possible coin combinations that we can make?
 
@@ -37,22 +37,24 @@ Number of coins of each type used:
 |    2    |    0    |     0   |
 {: rules="groups"}
 
-There is a pattern here.  Looking at the first row of this table, we might think of this problem as starting by looking the largest-valued coin (10p) with 20p value needed to reach the total and adding none of this type of coin, and then looking at the next-largest-valued coin (5p) with still 20p value needed and adding none of this type of coin, and then finally getting to the 1p coin and iterating through to add 20 * 1p coins to reach the total of 20p.  Now look at the second row of the table.  In terms of Javascript, this looks like it could be represented by a series of nested for loops.    
+There is a pattern here.  Looking at the first row of this table, we might think of this problem as starting by looking the largest-valued coin (10p) with 20p value needed to reach the total and adding none of this type of coin, and then looking at the next-largest-valued coin (5p) with still 20p value needed and adding none of this type of coin, and then finally getting to the 1p coin and iterating through to add 20 x 1p coins to reach the total of 20p.  Now look at the second row of the table.  We look at the largest-valued coin (10p) with 20p value needed to reach the total and adding none of this type of coin, and then looking at the next-largest-valued coin (5p) with still 20p value needed and add one of this type of coin, and then finally getting to the 1p coin and iterating through to add 15 x 1p coins to reach the total of 20p.  In Javascript, this pattern looks like it could be represented by a series of nested for loops.    
 
 ## Javascript
 Let's translate this problem into Javascript and write a function called `makeChange`.
 
 ### Input and Output
-Let's make the argument of the function a variable called `total`.  Since our goal is for the coins to sum up to 2£ (or 200p), we'll call this for the first time with 200.
+Let's make the argument of the function a variable called `total`.  Since our goal is for the coins to sum up to 2£ (or 200p), we'll call `makeChange` with 200.
 
-The return value should be the number of possible ways to make change for the total.  The return variable will be a counter initialized to 0.
+The return value should be the number of possible ways to make change for the total.  The return variable will be a counter named `count` initialized to 0.
+
+This gives us the basic structure below:
 
 {% highlight javascript %}
 var makeChange = function(total) {
 
   var coins = [1,2,5,10,20,50,100,200];
   var count = 0;
- 
+
   return count;
 };
 
@@ -96,7 +98,7 @@ The iterative function works, but it's not very elegant.  In fact, this problem 
 ## The Recursive Function
 
 ### The basic structure 
-We'll put a recursive subroutine called `changer` instead of the nested for loops.  So the basic structure looks something like this:
+We'll put a recursive subroutine called `changer` instead of the nested for loops.  This function would go where the for loops were in the iterative solution and be called at the end of `makeChange`:
 
 {% highlight javascript %}
 var makeChange = function(total) {
@@ -110,7 +112,6 @@ var makeChange = function(total) {
 
   changer();
   return count;
-
 };
 
 makeChange(200);
@@ -170,28 +171,21 @@ var makeChange = function(total){
 
   var changer = function(index, value){
 
-    // we grab the value at the index (moving from the last index
-    // backwards through the array)
     var currentCoin = coins[index];
 
-    // exit strategy - when the index gets to 0 instead of when we have no 
-    // more coins in the coinsLeft array
     if( index === 0){
-
-      // modulus check - support a lowest denomination other than 1
       if( value % currentCoin === 0){
         count++;
       }
       return;
     }
-
+    
     while( value >= 0 ){
       changer(index-1, value);
       value -= currentCoin;
     }
   }
   changer(coins.length-1, total);
-
   return count;
 };
 
