--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -18,7 +18,7 @@ One example output would be:
 5 x 1p, 5 x 2p, 1 x 5p, 1 x 10p, 1 x 20p, 1 x 50p, 1 x 1£
 
 ## Understanding the Problem 
-This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1 x 1p,1 x 2p is the same as 1 x 2p,1 x 1p and therefore we should only count one of these combinations.)    
+This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1 x 1p,1 x 2p is the same as 1 x 2p,1 x 1p and therefore we should only count one of these as a possible combinations.)    
 
 Let's start off by looking at a smaller version of this problem.  Imagine that we have only 3 different types of coins - 1p, 5p, and 10p - and we're trying to make 'piles' of coins that sum up to 20p.  What are the possible coin combinations that we can make?
 
@@ -43,9 +43,9 @@ There is a pattern here.  Looking at the first row of this table, we might think
 Let's translate this problem into Javascript and write a function called `makeChange`.
 
 ### Input and Output
-Let's make the argument of the function a variable called `total`.  Since our goal is for the coins to sum up to 2£ (or 200p), we'll call `makeChange` with 200.
+The argument of the function is a variable called `total`.  Since our goal is for the coins to sum up to 2£ (or 200p), we'll call `makeChange` with 200.
 
-The return value should be the number of possible ways to make change for the total.  The return variable will be a counter named `count` initialized to 0.
+The return value is the number of possible ways to make change for the total.  This will be represented as a counter named `count` initialized to 0.
 
 This gives us the basic structure below:
 
@@ -93,7 +93,7 @@ makeChange(200);
 
 Note that the `coins[coins.length-1]` notation looks a little strange, but the idea is to show the similarities between this iterative solution and the solution coming in the section below.
 
-The iterative function works, but it's not very elegant.  In fact, this problem can easily be divided into a series of similar subproblems - get all the combinations of coins with just 1p coins, all the combinations with 1p and 2p coins, all the combinations with 1p, 2p, and 5p coins, etc - and a problem like this is perfect for a recursive function.
+The iterative function works but it's not very elegant.  In fact, the coin sums problem can easily be divided into a series of similar subproblems - get all the combinations of coins with just 1p coins, all the combinations with 1p and 2p coins, all the combinations with 1p, 2p, and 5p coins, etc - and a problem like this is perfect for a recursive function.
 
 ## The Recursive Function
 
@@ -120,7 +120,7 @@ makeChange(200);
 ### Arguments 
 There are two things that we need to keep track of with each call of our recursive function.  We'll want to make these arguments of the recursive function.  
 
-First, we need to know which type of coin we're adding to our pile.  In the iterative version, we keep track of this in the decrement at every level of for loops.  Second, as we add coins to our pile, we need to keep track of the value still needed to reach the `total`.  In the iterative version, we do this by initializing the variable in each nested loop to the value of the previous loop (as in var b = a, var c = b, etc.)  In this recursive version, we save this information in a variable called `valueLeft` and we'll initially set it to `total`.  
+First, we need to know which type of coin we're adding to our pile.  In the iterative version, we keep track of this in the decrement at every level of for loops.  Here, we'll use `index` to know which coin in the `coins` array we're working with.  Second, as we add coins to our pile, we need to keep track of the value still needed to reach the `total`.  In the iterative version, we do this by initializing the variable in each nested loop to the value of the previous loop (as in var b = a, var c = b, etc.)  In this recursive version, we save this information in a variable called `valueLeft` and we'll initially set it to `total`.  
 
 {% highlight javascript %}
   var changer = function(index, valueLeft) {
@@ -131,7 +131,7 @@ First, we need to know which type of coin we're adding to our pile.  In the iter
 
 ### Inside the Recursive Function
 
-We've already decided that we'll start with the highest-valued coin.  Let's save the highest-valued coin to a variable called `currentCoin`.
+We've already decided that we'll start with the highest-valued coin and work backwards through the `coins` array.  Let's access this coin with the index and save it to `currentCoin`.
 
 {% highlight javascript %}
     var currentCoin = coins[index];
@@ -179,7 +179,7 @@ var makeChange = function(total){
       }
       return;
     }
-    
+
     while( value >= 0 ){
       changer(index-1, value);
       value -= currentCoin;
