coin sums first draft

--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -149,7 +149,7 @@ Now that we have `coinsLeft`, `valueLeft`, and `currentCoin`, we can start creat
     }
 {% endhighlight %}
 
-But when do we count the ways possible?  This is done when the index reaches 0 and we're looking at a denomination other than 1p.  Once we reach this point, we want to return out of the loop.
+But when do we increment our counter and capture the number of possible ways to reach the total?  This is done when the index of `coins` reaches 0 (we've tried putting all the types of coins in the pile) and we're not going over the total (we can make up the rest of the `value` needed with the `currentCoin` without a remainder). Once we reach this point, we want to return out of the loop.
 
 {% highlight javascript %}
     if (index === 0) {
