coin sums small tweak

--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -160,7 +160,7 @@ But when do we increment our counter and capture the number of possible ways to 
     }
 {% endhighlight %}
 
-Putting this all together, we get the following code:
+Putting this all together, we get the final code like below:
 
 {% highlight javascript %}
 var makeChange = function(total){
