changed the photo

--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -5,7 +5,10 @@ description:
 modified: 2014-02-04
 tags: [toy problems, algorithms]
 image:
-  feature: great-britain-coins-money.jpg
+  <!-- feature: great-britain-coins-money.jpg -->
+  feature: britishcoinspile.jpg
+  credit: wwarby
+  creditlink: http://www.flickr.com/photos/wwarby/
 comments: true
 share: true
 ---
