Updates to the Coin Sums posts

--- a/_posts/2014-02-04-coin-sums.md
+++ b/_posts/2014-02-04-coin-sums.md
@@ -21,7 +21,7 @@ One example output would be:
 5 x 1p, 5 x 2p, 1 x 5p, 1 x 10p, 1 x 20p, 1 x 50p, 1 x 1£
 
 ## Understanding the Problem 
-This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like Rock Paper Scissors because we do not want duplicates (1 x 1p,1 x 2p is the same as 1 x 2p,1 x 1p and therefore we should only count one of these as a possible combinations.)    
+This problem deals with the possible permutations of coins that equal 2£.  However, it is not a pure combinatorics problem like [Rock Paper Scissors](http://jgpettibone.github.io/rock-paper-scissors/) because we do not want duplicates (1 x 1p,1 x 2p is the same as 1 x 2p,1 x 1p and therefore we should only count one of these as a possible combinations.)    
 
 Let's start off by looking at a smaller version of this problem.  Imagine that we have only 3 different types of coins - 1p, 5p, and 10p - and we're trying to make 'piles' of coins that sum up to 20p.  What are the possible coin combinations that we can make?
 
@@ -42,7 +42,7 @@ Number of coins of each type used:
 
 There is a pattern here.  Looking at the first row of this table, we might think of this problem as starting by looking the largest-valued coin (10p) with 20p value needed to reach the total and adding none of this type of coin, and then looking at the next-largest-valued coin (5p) with still 20p value needed and adding none of this type of coin, and then finally getting to the 1p coin and iterating through to add 20 x 1p coins to reach the total of 20p.  Now look at the second row of the table.  We look at the largest-valued coin (10p) with 20p value needed to reach the total and adding none of this type of coin, and then looking at the next-largest-valued coin (5p) with still 20p value needed and add one of this type of coin, and then finally getting to the 1p coin and iterating through to add 15 x 1p coins to reach the total of 20p.  In Javascript, this pattern looks like it could be represented by a series of nested for loops.    
 
-## Javascript
+## The Code
 Let's translate this problem into Javascript and write a function called `makeChange`.
 
 ### Input and Output
