--- a/_posts/2014-01-08-shuffle.md
+++ b/_posts/2014-01-08-shuffle.md
@@ -3,7 +3,7 @@ layout: post
 title: Shuffle
 description: 
 modified: 2014-01-08
-tags: [toy problems, algorithms]
+tags: [algorithms]
 image:
   feature: abstract-4.jpg
 comments: true
